--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "outside",
   "version": "2.0.0",
+  "type": "module",
   "description": "Boilerplate for WDD 330 SleepOutside project",
   "main": "main.js",
   "scripts": {
@@ -10,12 +11,13 @@
     "lint": "eslint *.js src/**/*.js",
     "format": "prettier --ignore-path ./.gitignore --write \"./**/*.{html,json,js,ts,css}\"",
     "test": "jest"
-    
   },
   "author": "Shane Thompson",
   "license": "ISC",
   "devDependencies": {
-    "eslint": "^8.56.0",
+    "@babel/eslint-parser": "^7.26.5",
+    "@babel/preset-env": "^7.26.0",
+    "eslint": "^9.18.0",
     "eslint-config-prettier": "^8.10.0",
     "eslint-plugin-import": "^2.29.1",
     "jest": "^29.7.0",
